DesignProject/tests/pass/test01_pass.src
func add(a : int, b : int) -> int {
    local result : int;
    result := a + b;
    return(result);
}

