DesignProject/tests/error/test01_error.src
func add(a : int, b : int) -> int {
    local result : int;
    result := a + b;
    total := result + 10;
    return(result);
}

